Fix horizontal overflow

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -828,6 +828,7 @@ footer .company-mission {
 .hero-section h1 {
   font-weight: 200;
   color: #fff;
+  word-break: break-word;
 }
 
 .hero-section p {
@@ -1123,7 +1124,7 @@ footer .company-mission {
 .technology-section .img-technology {
   text-align: center;
   margin: 30px 0px;
-  width: 150px;
+  max-width: 150px;
 }
 
 .technology-section .img-technology img {
